docs: fix the status code of `old password is wrong`
